--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ mathematics/benjamin_bulbs.class
 mathematics/rotate.class
 mathematics/rotate.class
 mathematics/rotate.class
+mathematics/gcd.class
+mathematics/gcd.java
